[package]
name = "ct"
version = "0.1.0"
authors = ["veto"]
edition = "2021"
rust-version = "1.75"


[dependencies]
ct_nox = { path = "./ct_nox"}
eframe = { version = "0.21.3", default-features = false, features = [
"__screenshot",
"default_fonts",
"glow",
"accesskit",
"persistence"
] }

egui_file = {version = "0.5.4"}
rfd = "0.10"
image = "0.24.5"
cli-clipboard = {version="*"}
#native-dialog = "0.6.3"