[package]
name = "ct"
version = "0.1.0"
authors = ["veto"]
edition = "2021"
rust-version = "1.80"


[dependencies]
ct_nox = { path = "./ct_nox"}


#https://docs.rs/eframe/latest/eframe/
eframe = { version = "0.23.0", default-features = false, features = [
"__screenshot",
"default_fonts",
"glow",
"accesskit",
"persistence"
] }

#https://docs.rs/egui_file/latest/egui_file/
egui_file = {version = "*"}

#https://docs.rs/rfd/latest/rfd/
rfd = "*"

#https://docs.rs/image/latest/image/
image = "*"

#https://docs.rs/cli-clipboard/latest/cli_clipboard/
cli-clipboard = {version="*"}
#native-dialog = "0.6.3"